--- a/templates/4.html
+++ b/templates/4.html
@@ -108,7 +108,7 @@ font-weight: bold;
 </head>
 <body>
 
-
+<button id="generateSpreadsheet" class="button">Check schedule</button>
 <button id="generateSpreadsheet" class="button" onclick="downloadCSV()">Download schedule</button>
 <button id="generateSpreadsheet" class="button" onclick="downloadPresiderCSV()">Download presider csv</button>
 <button id="generateSpreadsheet" class="button" onclick="moderator()">Return to Moderator Page</button>
