--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -230,9 +230,9 @@ input[type="text"] {
 
   <!-- Dropdown Popup Menu -->
   <div id="dropdownMenu" class="dropdown">
-    <a href="#">Return to Home</a>
+    <a href="/">Return to Home</a>
     <a href="#">Help</a>
-    <a href="#">Logout</a>
+    <a href="/login">Logout</a>
   </div>
 
   <script>
