--- a/templates/4.html
+++ b/templates/4.html
@@ -120,7 +120,7 @@ font-weight: bold;
 var scheduleCountDistribution = {};
 var zeroValueDistribution = {};
 var initialRoomDistribution = {};
-	
+var timeTopicDict={};	
 var finalRoomDistribution={};
 var presiderInfo={};
     fetch('/getFinalDistribution')
