--- a/templates/topicsByRoom.html
+++ b/templates/topicsByRoom.html
@@ -141,6 +141,12 @@
     .dropdown a:hover {
       background-color: #ccc;
     }
+
+#app {
+    width: 100%; /* ✅ Makes it match .formContainer */
+}
+
+	  
   </style>
 </head>
 <body>
