--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -292,7 +292,7 @@ input[type="text"] {
         <button class="button" disabled=true onclick="viewFinalSchedule()">
         	View Final Schedule
         </button>
-        <button class="button" disabled=true onclick="assignPresiders()">
+        <button class="button" disabled=false onclick="assignPresiders()">
         	Clear Database
         </button>
     </div>
