--- a/templates/upload.html
+++ b/templates/upload.html
@@ -98,7 +98,7 @@ width:50px;
     
     <p>OR</p>
     
-    <p>Make the spreadsheet public and enter the link below</p>
+    <p>Make the spreadsheet public using a personal (non-MCPS) account and enter the link below</p>
     <input id="spreadsheetUrl" type="text" name="url" style="width:100%; font-size: 22px; font-family: Times New Roman;" placeholder="Paste spreadsheet csv here..." value="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUTvl8O4D9cuNTR1MBYAu8CgRzM_sI6eK29hoPriy-4edUpz7YUSDL80wLqxBszu0RLV2YYMLgL3pK/pub?output=csv">
     
     <br><br><br>
@@ -132,7 +132,7 @@ width:50px;
     
     <p>OR</p>
     
-    <p>Make the spreadsheet public and enter the link below</p>
+    <p>Make the spreadsheet public using a personal (non-MCPS) account and enter the link below</p>
     <input id="juniorSpreadsheetUrl" type="text" name="url" style="width:100%; font-size: 22px; font-family: Times New Roman;" placeholder="Paste spreadsheet csv here..." value="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ7CKfSEaLsaw7I5GanMCMe8fU6DvOY79LIOAE7PnvSebb9kY51aVsDNShD7oMG6KLs29b811ijnDx7/pub?gid=0&single=true&output=csv">
     
     <br><br><br>
