--- a/templates/login.html
+++ b/templates/login.html
@@ -51,7 +51,7 @@
     }
 
     .button {
-      background-color: #b51111;
+      background-color: #B51111;
       color: white;
       font-size: 22px;
       font-weight: bold;
@@ -60,6 +60,9 @@
       border: none;
       cursor: pointer;
       font-family: Assistant, sans-serif;
+      border-radius: 6px;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
     
      .spreadsheet-button {
@@ -77,6 +80,8 @@
 
     .button:hover {
       background-color: #a10000;
+      transform: scale(1.1);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
     }
 
 
