--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,8 @@
   <style>
     body {
       margin: 0;
-      height: 100vh;
-      background-color: #000;
+      height: 150vh;
+      background: linear-gradient(180deg, #6e0000, black);
       display: flex;
       justify-content: center;
       align-items: center;
