--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     body {
       margin: 0;
       height: 150vh;
-      background: linear-gradient(180deg, #6e0000, black);
+      background: linear-gradient(180deg,  #360000, black);
       display: flex;
       justify-content: center;
       align-items: center;
