--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
     }
 
     .backing {
-      background-color: #d9d9d9;
+      background: linear-gradient(180deg, #d9d9d9, #b6abab);
         padding: 40px;
         box-sizing: border-box;
         width: 350px;
@@ -21,13 +21,14 @@
     }
 
     .header {
-      background-color: #360000;
+      background: linear-gradient(180deg, #550000, #360000);
       color: white;
       font-size: 24px;
       font-weight: bold;
       text-align: center;
       padding: 20px;
       margin-bottom: 30px;
+      border-radius: 6px;
       font-family: Assistant, sans-serif;
     }
 
@@ -47,6 +48,7 @@
       border: none;
       background-color: #f3f3f3;
       box-sizing: border-box;
+      border-radius: 8px;
       font-family: Assistant, sans-serif;
     }
 
