--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,7 @@
         box-sizing: border-box;
         width: 350px;
         margin-top: 0px;
+        border-radius: 6px;
     }
 
     .header {
