--- a/templates/seniorQuestionnaire.html
+++ b/templates/seniorQuestionnaire.html
@@ -8,7 +8,7 @@
     	margin: 0;
       padding: 40px;
       display: flex;
-    	background-color: black;
+      background: linear-gradient(180deg,  #360000, black);
       align-items: center;
       justify-content: center;
       font-family: 'Assistant', sans-serif;
@@ -18,17 +18,22 @@
         padding: 10px;
         font-size: 18px;
         color: white;
+        border-radius: 6px;
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       }
      .formContainer{
-     	background-color: #D9D9D9;
+     	background: linear-gradient(180deg, #d9d9d9, #b6abab);
       	padding: 40px;
       	width: 100%;
       	max-width: 600px;
+        border-radius: 7px;
       	box-shadow: 0 2px 12px rgba(0, 0, 0, 0.15);
     }
 	.header{
-    	background-color: #580C1F;
+    	background: linear-gradient(180deg, #550000, #360000);
         text-align: center;
+        border-radius: 6px;
         color: white;
         font-family: Arial, sans-serif;
         padding: 10px;
@@ -40,6 +45,7 @@
     }
     .selection input[type="radio"]{
     	width=100%;
+        transform: scale(1.1);
      }
     
     button[type="submit"]{
@@ -54,10 +60,14 @@
         margin-top: 30px;
         width: 100%;
         font-weight: bold;
+        border-radius: 7px;
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }  
     button[type="submit"]:hover {
   background-color: #870c0cff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
 }
     
     table {
@@ -69,6 +79,7 @@
       border: 1.5px solid #000;
       padding: 10px;
       text-align: center;
+      border-radius: 6px;
     }
     .checkbox-cell input[type="checkbox"] {
       transform: scale(1.5);
@@ -100,6 +111,7 @@
       width: 100%;
       box-sizing: border-box;
       text-align: left;
+      border-radius: 6px;
     }
 
    
@@ -148,6 +160,7 @@
         padding: 15px;
         border-color:#cb5151ff;
         color: white;
+        border-radius: 6px;
     }
     
     .inputBox{
@@ -155,6 +168,7 @@
         width 200px;
         paddding: 40px;
         font-family: Arial, sans-serif;
+        border-radius: 6px;
       }
      
      .side{
