--- a/templates/accessdenied.html
+++ b/templates/accessdenied.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Assistant&display=swap" rel="stylesheet">
-  <title>home</title>
+  <title>access denied</title>
   <style>
  body {
   
@@ -45,10 +45,9 @@ h2, h3 {
 .my-image {
   width: 150px;
   height: auto;
-  border-radius: 10px; /* optional styling */
+  border-radius: 10px;
 }
-
-
+    
   </style>
   </head>
   
@@ -64,7 +63,5 @@ h2, h3 {
     }
   </script>
 
-
-   
 </body>
 </html>
