--- a/templates/bugreport.html
+++ b/templates/bugreport.html
@@ -8,9 +8,9 @@ body{
     background-color: black;
     color: white;
     font-family: Assistant, sans-serif;
-    display: flex; /* ✅ Enables flexbox */
-    justify-content: center; /* ✅ Centers horizontally */
-    margin: 0; /* ✅ Removes default margin */
+    display: flex;
+    justify-content: center; /* Centers horizontally */
+    margin: 0;
     padding: 40px;
 
  }
