--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -118,10 +118,10 @@
     }
 
 .button:disabled {
-    background-color: gray;  /* Changes background */
-    color: white;  /* Adjusts text color */
-    cursor: not-allowed;  /* Prevents hover effect */
-    pointer-events: none;  /* Makes button unclickable & unhoverable */
+    background-color: gray;
+    color: white;
+    cursor: not-allowed;
+    pointer-events: none;
 }
 
     
