--- a/templates/index.html
+++ b/templates/index.html
@@ -47,44 +47,42 @@
       align-items: center;
     }
 
-    .button {
+    .button-wrapper {
       opacity: 0;
       animation: fadeInUp 0.6s ease forwards;
+      animation-fill-mode: forwards;
+      margin: 10px;
+    }
+
+    .button-wrapper:nth-child(1) {
+      animation-delay: 0.3s;
+    }
+
+    .button-wrapper:nth-child(2) {
+      animation-delay: 0.6s;
+    }
+
+    .button-wrapper:nth-child(3) {
+      animation-delay: 0.9s;
+    }
+
+    .button {
       background-color: #B51111;
       color: white;
-      padding: 12px 24px;
+      padding: 12px 30px;
       border: none;
       border-radius: 6px;
       font-size: 18px;
       cursor: pointer;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      margin: 10px;
       font-weight: bold;
       text-align: center;
-    }
-
-    .button:nth-of-type(1) {
-      padding-left: 30px;
-      padding-right: 30px;
-      animation-delay: 0.3s;
-    }
-
-    .button:nth-of-type(2) {
-      padding-left: 30px;
-      padding-right: 30px;
-      animation-delay: 0.6s;
-    }
-
-    .button:nth-of-type(3) {
-      padding-left: 30px;
-      padding-right: 30px;
-      animation-delay: 0.9s;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .button:hover {
-      transform: scale(1.15);
-      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+      transform: scale(1.13);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
     }
   </style>
 </head>
@@ -98,11 +96,16 @@
     </div>
   </div>
 
-
   <div class="button-container">
-    <button class="button" onclick="wsp()">Log In</button>
-    <button class="button" onclick="wsp2()">Generate schedules from spreadsheet</button>
-    <button class="button" onclick="wsp3()">Improvements Form</button>
+    <div class="button-wrapper">
+      <button class="button" onclick="wsp()">Log In</button>
+    </div>
+    <div class="button-wrapper">
+      <button class="button" onclick="wsp2()">Generate schedules from spreadsheet</button>
+    </div>
+    <div class="button-wrapper">
+      <button class="button" onclick="wsp3()">Improvements Form</button>
+    </div>
   </div>
 
   <script>
